# flash-linear-attention-npu

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  OAT.xml  README.md  Third_Party_Open_Source_Software_Notice  build.sh  classify_rule.yaml  install_deps.sh
attention/common/op_kernel/: fia_public_define.h
attention/flash_attention_score/op_host/: flash_attention_score_def.cpp
attention/flash_attention_score/op_kernel/: flash_attention_score.cpp
attention/fused_infer_attention_score/: README.md
attention/fused_infer_attention_score/docs/: aclnnFusedInferAttentionScore.md  aclnnFusedInferAttentionScoreV2.md  aclnnFusedInferAttentionScoreV3.md  aclnnFusedInferAttentionScoreV4.md  aclnnFusedInferAttentionScoreVX.md
attention/fused_infer_attention_score/op_host/: CMakeLists.txt  OWNERS  flash_attention_infer_tiling.h  fused_infer_attention_score_def.cpp  fused_infer_attention_score_tiling.cpp  fused_infer_attention_score_tiling.h  fused_infer_attention_score_tiling_register.cpp
attention/fused_infer_attention_score/op_kernel/: flash_attention_interface.cpp  flash_attention_regular.h  fused_infer_attention_score.cpp  fused_infer_attention_score_apt.cpp  fused_infer_attention_score_template_tiling_key.h  fused_infer_attention_score_tilingkey.h  fused_infer_attention_score_v3.cpp  kernel_common.hpp
attention/incre_flash_attention/: README.md
attention/incre_flash_attention/docs/: IFA算子设计介绍.md  aclnnIncreFlashAttention.md  aclnnIncreFlashAttentionV2.md  aclnnIncreFlashAttentionV3.md  aclnnIncreFlashAttentionV4.md
attention/incre_flash_attention/examples/: test_aclnn_incre_flash_attention.cpp
attention/incre_flash_attention/op_host/: CMakeLists.txt  OWNERS  incre_flash_attention_def.cpp  incre_flash_attention_tiling.cpp  incre_flash_attention_tiling.h  incre_flash_attention_tiling_base.h  incre_flash_attention_tiling_check.cpp  incre_flash_attention_tiling_context.h  incre_flash_attention_tiling_impl.h  incre_flash_attention_tiling_struct.h  incre_flash_attention_tiling_v2.cpp  incre_flash_attention_tiling_v2.h
attention/incre_flash_attention/op_kernel/: incre_flash_attention.cpp  incre_flash_attention_apt.cpp  incre_flash_attention_arch32.h
attention/mla_prolog/: README.md
attention/mla_prolog/docs/: aclnnMlaProlog.md
attention/mla_prolog/op_host/: mla_prolog_tiling.cpp
attention/mla_prolog/op_kernel/: kernel_mla_prolog_split_n.h  service_dynamic_quant_qn_mul_qr.h
attention/mla_prolog_v2/: README.md
attention/mla_prolog_v2/docs/: aclnnMlaPrologV2WeightNz.md
attention/mla_prolog_v3/: README.md
attention/mla_prolog_v3/docs/: MlaPrologV3算子设计介绍.md  aclnnMlaPrologV3WeightNz.md
attention/nsa_compress_with_cache/op_host/: nsa_compress_with_cache_def.cpp
attention/nsa_compress_with_cache/op_kernel/: nsa_compress_with_cache.cpp
attention/nsa_selected_attention_infer/op_graph/: CMakeLists.txt  nsa_selected_attention_infer_proto.h
attention/prompt_flash_attention/: README.md
attention/prompt_flash_attention/docs/: PFA算子设计介绍.md  (+3 more)
chunk_gated_delta_rule/: CMakeLists.txt
chunk_gated_delta_rule/chunk_bwd_dv_local/: run.sh
chunk_gated_delta_rule/chunk_fwd_o/: CMakeLists.txt
chunk_gated_delta_rule/grouped_matmul/: CMakeLists.txt
chunk_gated_delta_rule/prepare_wy_repr_bwd_da/: CMakeLists.txt  run.sh
cmake/: aclnn_ops_transformer.h.in  build_empty_package.cmake  config.cmake  config_utest.cmake  custom_build.cmake  dependencies.cmake  func.cmake  func_examples.cmake  func_utest.cmake  gen_ops_info.cmake  intf.cmake  intf_pub.cmake  intf_pub_examples.cmake  intf_pub_linux.cmake  intf_pub_llt_gccnative.cmake  intf_pub_utest.cmake  makeself_built_in.cmake  makeself_custom.cmake  obj_func.cmake  opbuild.cmake  package.cmake  rty_obj_func.cmake  runtimeKB.cmake  static.cmake  symbol.cmake  ut.cmake  variables.cmake
cmake/modules/: FindOPBASE.cmake  FindPython.cmake  Findaicpu.cmake  Findalog.cmake  Finddlog.cmake  Findjson.cmake  Findmetadef.cmake  Findnnopbase.cmake  Findoptiling.cmake  Findplatform.cmake  Findruntime.cmake  Findsecurec.cmake  Findtilingapi.cmake  Findunified_dlog.cmake
cmake/scripts/: check_version_compatible.py  convert_yaml.py  fix_format.sh  parse_changed_files.py  prepare.sh
common/: CMakeLists.txt
common/src/: fallback_comm.cpp  fallback_comm_2stages.cpp
common/stub/: CMakeLists.txt
docs/: aclnnRecurrentGatedDeltaRule.md
docs/zh/: op_api_list.md  op_list.md
examples/: CMakeLists.txt
examples/add_example/: CMakeLists.txt
examples/mc2/: CMakeLists.txt
mc2/attention_to_ffn/: README.md
mc2/ffn_to_attention/: CMakeLists.txt  README.md
moe/moe_init_routing_v2/: README.md
op-plugin/: LICENSE  Third_Party_Open_Source_Software_Notice  gencode.sh
op-plugin/ci/: build.sh
op-plugin/codegen/: code_template.py  context.py  gen.py  local.py  model.py  utils.py
op_host/: CMakeLists.txt  recurrent_gated_delta_rule_def.cpp  recurrent_gated_delta_rule_infershape.cpp  recurrent_gated_delta_rule_tiling.cpp  recurrent_gated_delta_rule_tiling.h
op_host/op_api/: aclnn_recurrent_gated_delta_rule.cpp
op_kernel/: recurrent_gated_delta_rule.cpp  recurrent_gated_delta_rule.h  recurrent_gated_delta_rule_tiling_data.h
recurrent_gated_delta_rule/examples/: test_aclnn_recurrent_gated_delta_rule.cpp
recurrent_gated_delta_rule/op_host/: CMakeLists.txt  recurrent_gated_delta_rule_def.cpp  recurrent_gated_delta_rule_tiling.cpp  recurrent_gated_delta_rule_tiling.h
recurrent_gated_delta_rule/op_kernel/: recurrent_gated_delta_rule.h
tests/: test_config.yaml
torch_custom/: build_and_run.sh  setup.py
torch_custom/csrc/: function.h  npu_prepare_wy_repr_bwd_full.cpp  registration.cpp
torch_custom/custom_ops/: __init__.py  chunk_gated_delta_rule.py
torch_custom/test/: test_prepare_wy_repr_bwd_full.py
(+1126 files in other folders)
